--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit>=1.31.0
-ultralytics>=8.3.0
-opencv-python-headless>=4.8.0.74
-Pillow>=10.0.0
-numpy>=1.23.0
-pandas>=2.0.0
-matplotlib>=3.7.0
-torch>=2.0.0
+streamlit==1.32.0
+ultralytics==8.3.0
+opencv-python-headless==4.8.0.74
+Pillow==10.0.0
+numpy==1.26.4
+pandas==2.2.2
+onnxruntime==1.16.0
+matplotlib==3.7.2
+torch==2.1.0
