--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 streamlit==1.32.0
 ultralytics==8.3.0
+
+# OpenCV headless ONLY (avoid libGL.so.1 error)
 opencv-python-headless==4.8.0.74
-Pillow==10.0.0
-numpy==1.26.4
+
+# Pillow (working version for Python 3.13)
+Pillow==10.3.0
+
+# Numpy & Pandas compatible with Python 3.13
+numpy==2.1.3
 pandas==2.2.2
-onnxruntime==1.16.0
-matplotlib==3.7.2
-torch==2.1.0
+
+# PyTorch CPU build for Python 3.13
+torch==2.5.1
+torchvision==0.20.0
+
+# Remove ONNX – not needed for inference with .pt model
